{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 142,
  "lineage": "74de1eaa-b920-68cb-077b-4f78a8d483a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a44f97e8e542b56d",
            "domain": "vpc",
            "id": "eipalloc-0c6beffa8c3acec3c",
            "instance": "i-00eb575127a332948",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0473cd111fab58c73",
            "private_dns": "ip-10-0-152-6.ap-southeast-2.compute.internal",
            "private_ip": "10.0.152.6",
            "public_dns": "ec2-52-65-126-21.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.126.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.TF-EC2",
            "aws_security_group.tf-sg",
            "aws_subnet.tf-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567f647e75c7bc05",
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:instance/i-00eb575127a332948",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00eb575127a332948",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mySSH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0473cd111fab58c73",
            "private_dns": "ip-10-0-152-6.ap-southeast-2.compute.internal",
            "private_ip": "10.0.152.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9f5c66a7fabc296",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0521f2363730d761b",
            "tags": {
              "Name": "TF-EC2"
            },
            "tags_all": {
              "Name": "TF-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0daff2459af5482b6"
            ]
          },
          "dependencies": [
            "aws_security_group.tf-sg",
            "aws_subnet.tf-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:internet-gateway/igw-0309ac22474781940",
            "id": "igw-0309ac22474781940",
            "owner_id": "697377046884",
            "tags": {
              "Name": "tf-gw"
            },
            "tags_all": {
              "Name": "tf-gw"
            },
            "vpc_id": "vpc-09bf297b2c020eacc"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:route-table/rtb-02ff567252fb5981d",
            "id": "rtb-02ff567252fb5981d",
            "owner_id": "697377046884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0309ac22474781940",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-route"
            },
            "tags_all": {
              "Name": "tf-route"
            },
            "vpc_id": "vpc-09bf297b2c020eacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-gw",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0755ce8755a77e68c",
            "route_table_id": "rtb-02ff567252fb5981d",
            "subnet_id": "subnet-0521f2363730d761b"
          },
          "dependencies": [
            "aws_vpc.tf-vpc",
            "aws_internet_gateway.tf-gw",
            "aws_route_table.tf-route",
            "aws_subnet.tf-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:security-group/sg-0daff2459af5482b6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daff2459af5482b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "697377046884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-sg"
            },
            "tags_all": {
              "Name": "tf-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bf297b2c020eacc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:subnet/subnet-0521f2363730d761b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0521f2363730d761b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697377046884",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-09bf297b2c020eacc"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697377046884:vpc/vpc-09bf297b2c020eacc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f3ca1a763cc2da2",
            "default_route_table_id": "rtb-0eed3193b5f9e1d93",
            "default_security_group_id": "sg-066e91b6ae558412d",
            "dhcp_options_id": "dopt-07958b60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09bf297b2c020eacc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eed3193b5f9e1d93",
            "owner_id": "697377046884",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}